<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluePong</string>
    <string name="hello_world">Hello world!</string>
    <string name="onePlayerButtonString">1 Player</string>
    <string name="twoPlayerButtonString">2 Player</string>
    <string name="tournamentButtonSring">Tournament</string>
    <string name="title_activity_one_player">1 Player</string>
    <string name="title_activity_two_player">2 Player</string>
    <string name="title_activity_tournament">Tournament</string>
    <string name="trainingButtonString">Training</string>
    <string name="aiButtonString">Player VS. AI</string>
    <string name="multitouchButtonString">Multitouch</string>
    <string name="bluetoothButtonString">Bluetooth</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="btn_settings">Settings</string>
    <string name="lbl_gameplay_settings">Gameplay</string>

    <string name="lbl_ball_speed_setting">Ball speed</string>
    <string name="lbl_ball_speed_increase">Speed up</string>
    <string name="lbl_ball_size_setting">Ball size</string>

    <string name="lbl_paddle_speed_setting">Paddle speed</string>
    <string name="lbl_paddle_size_setting">Paddle width</string>

    <string name="lbl_ai_handicap">AI handicap</string>

    <string name="lbl_appearance_settings">Appearance</string>
    
    <string name="title_activity_tournament_overview">TournamentOverviewActivity</string>
    <string name="tournamentOverviewNextGameString">Next match:</string>
    <string name="tournamentOverviewStartGameButtonString">Start</string>
    <string name="tournamentOverviewWinnerText">The winner is:</string>
    <string name="tournamentOverviewVersus">versus</string>
    <string name="aritifialIntelligence">AI</string>
    <string name="tournamentOverviewErrorGameEndText">Because of an error, you have to replay the last game.</string>
    <string name="tournamentActivityStartTournamentButtonString">Start tournament</string>
    <string name="tournamentActivityButtonOkString">OK</string>
    <string name="tournamentActivityPlayerNumberSetText">Enter number of players:</string>
    <string name="tournamentActivityPlayerNumberSetErrorText">At least two players required</string>
    <string name="tournamentActivitySetPlayerNameText">Enter name of player</string>

    <string name="StartScreenString">Start</string>
    <string name="PauseScreenString">Pause</string>
    <string name="WinScreenString">wins</string>
    <string name="bluetoothTitle">Bluetooth</string>
    <string name="btn_bluetooth_hostGame">Host game</string>
    <string name="btn_bluetooth_joinGame">Join game</string>
    <string name="lbl_bluetooth_joinGame">Select device to join</string>
    <string name="btn_bluetooth_startServer">Start server</string>
    <string name="lbl_bluetooth_wait">Waiting for opponent</string>
    <string name="bluetoothConnectionFailed">Connection failed</string>
    <string name="bluetoothConnectionSuccess">Connection established</string>
    <string name="bluetoothServerFailed">Connection failed</string>
    <string name="btn_bluetooth_startGame">Start game</string>
    <string name="bluetoothConnectionLost">Connection lost</string>
    <string name="bluetoothNoBluetooth">It appears your device does not have bluetooth</string>
</resources>