<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tournamentButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp"
            android:onClick="showSettings"
            android:text="@string/btn_settings" />

    <Button
        android:id="@+id/tournamentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twoPlayerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:onClick="tournamentMode"
        android:text="@string/tournamentButtonSring" />

    <Button
        android:id="@+id/twoPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onePlayerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:onClick="twoPlayer"
        android:text="@string/twoPlayerButtonString" />

    <Button
        android:id="@+id/onePlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:onClick="onePlayer"
        android:text="@string/onePlayerButtonString" />

</RelativeLayout>
